syntax = "proto3";

package io.xpring;

import "xrp_amount.proto";
import "meta.proto";

// Information about an account on the ledger.
// Next field: 6
message AccountInfo {

    AccountRoot account_data = 1;

    SignerList signer_list = 2;

    uint32 ledger_index = 3;
    
    QueueData queue_data = 4;

    bool validated = 5; 
   
}

message QueueData {

uint32 txn_count = 1;

bool auth_change_queued = 2;

uint32 lowest_sequence = 3;

uint32 highest_sequence = 4;

uint64 max_spend_drops_total = 5;

repeated QueuedTransaction transaction = 6;
}

message QueuedTransaction {
bool auth_change = 1;

uint64 fee = 2;

uint64 fee_level = 3;

uint64 max_spend_drops = 4;

uint32 seq = 5;

uint32 last_ledger_sequence = 6;
}
